--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://taylorshmailor.github.io/2025-portfolio",
   "name": "2025-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -6,9 +7,11 @@
     "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
     "@splinetool/react-spline": "^4.0.0",
+    "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-typed": "^2.0.12",
@@ -16,6 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
